feat: add normalize.css date +'%Y-%m-%d %H:%M:%S'

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/cssMemeSlider/style.css">
 </head>
 <body>
-    <section>
+    <section class="main">
         <div class="wrapper">
             <div class="sliders">
                 <img src="./assets/img/firstslide.png" alt="first slide">
